--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -20,10 +20,13 @@
 
     <!-- The padding around the statusbar -->
     <dimen name="status_bar_padding_top">8dp</dimen>
-    <dimen name="status_bar_padding_start">2dp</dimen>
+    <dimen name="status_bar_padding_start">5dp</dimen>
     <dimen name="status_bar_padding_end">4dp</dimen>
 
     <!-- Whether device has screen with higher aspect ratio -->
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
+
+    <!-- Margin on the left side of the carrier text on Keyguard -->
+    <dimen name="keyguard_carrier_text_margin">264px</dimen>
 
 </resources>
